# py-cidoc-crm

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cidoc_crm_toolkit/: __init__.py  api.py  cli.py  enums.py  exceptions.py  models.py  repository.py
tests/: test_api.py  test_repository.py
